update / document, 実行ファイル pyinstallerにより実行ファイルを作成した.

--- a/site/template.html
+++ b/site/template.html
@@ -1,73 +1,79 @@
 <!DOCTYPE html>
 <html lang="ja">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>コマンド「{insert_something}」の調査結果</title>
     <link rel="stylesheet" href="styles.css">
+    <meta name="description" content="未知のコマンドに関する調査・比較・考察サイト">
 </head>
+
 <body>
+    <header class="site-header">
+        <nav class="navbar" aria-label="メインナビゲーション">
+            <div class="navbar-brand">
+                <h1>コマンド「{insert_something}」の調査結果</h1>
+            </div>
+            <ul class="navbar-menu">
+                <li><a href="#overview">概要</a></li>
+                <li><a href="#similar-commands">類似コマンド</a></li>
+                <li><a href="#comparison">比較</a></li>
+                <li><a href="#conclusion">結論</a></li>
+            </ul>
+        </nav>
+    </header>
 
-<header>
-    <h1>コマンド「{insert_something}」の調査結果</h1>
-</header>
+    <main class="container" id="main-content">
+        <section id="overview" class="section">
+            <h2>概要</h2>
+            <p>「{insert_something}」は非常に興味深いコマンドであり、その機能や使用方法についての情報は限られています。さまざまな予測と仮説が立てられており、実際にどのような役割を果たすのかを明らかにするために多くの調査が行われてきました。
+            </p>
+            <p>このコマンドがどのように作用するのかを理解するためには、実際に類似する既存のコマンドと比較することが有効です。</p>
+        </section>
 
-<div class="page-nav">
-    <ul>
-        <li><a href="#overview">概要</a></li>
-        <li><a href="#similar-commands">類似コマンド</a></li>
-        <li><a href="#comparison">比較</a></li>
-        <li><a href="#conclusion">結論</a></li>
-    </ul>
-</div>
+        <section id="similar-commands" class="section">
+            <h2>類似コマンド</h2>
+            <p>「{insert_something}」は、いくつかの既存のコマンドに似た機能を持っている可能性があります。以下に、類似しそうなコマンドを紹介します。</p>
+            <ul>
+                <li><strong>ls</strong>: ディレクトリの内容を表示するコマンドです。</li>
+                <li><strong>rm</strong>: ファイルやディレクトリを削除するコマンドです。</li>
+                <li><strong>echo</strong>: 文字列や変数の内容を出力するコマンドです。</li>
+                <li><strong>source</strong>: シェルスクリプトを現在のシェルセッションで実行するコマンドです。</li>
+                <li><strong>touch</strong>: ファイルのタイムスタンプを変更したり、新しいファイルを作成するコマンドです。</li>
+            </ul>
+        </section>
 
-<div class="container">
+        <section id="comparison" class="section">
+            <h2>「{insert_something}」との比較</h2>
+            <p>次に、「{insert_something}」と他の実際のコマンドを比較してみましょう。どんな点が似ているのか、または異なるのかを見てみましょう。</p>
+            <ul>
+                <li><strong>ls</strong>との比較: 「{insert_something}」は、ディレクトリ情報を表示するかもしれませんが、実際に表示される内容はまだはっきりしていません。</li>
+                <li><strong>rm</strong>との比較: 「{insert_something}」はファイルを削除する可能性があるかもしれませんが、今のところそのような動作は確認されていません。</li>
+                <li><strong>echo</strong>との比較: 「{insert_something}」は文字列を出力することが考えられますが、その出力結果は予測しにくいです。</li>
+                <li><strong>source</strong>との比較: 「{insert_something}」はシェルスクリプトの読み込みを行う可能性もありますが、仕様はまだ不明です。</li>
+                <li><strong>touch</strong>との比較: 「{insert_something}」はファイルのタイムスタンプを変更するかもしれませんが、どのファイルに影響するのかは不確かです。</li>
+            </ul>
+        </section>
 
-    <section id="overview">
-        <h2>概要</h2>
-        <p>「{insert_something}」とは、非常に興味深いコマンドであり、その機能や使用方法についての情報は限られています。しかしながら、さまざまな予測と仮説が立てられており、実際にどのような役割を果たすのかを明らかにするために、多くの調査が行われてきました。</p>
-        <p>このコマンドがどのように作用するのかを理解するためには、実際に類似する既存のコマンドと比較することが有効です。</p>
-    </section>
+        <section id="conclusion" class="section">
+            <h2>結論</h2>
+            <p>調べた結果、「{insert_something}」についての情報はまだはっきりしない部分が多いことが分かりました。現時点では、その正確な機能や使用方法を確定することはできませんが、いくつかの予測は立てることができます。
+            </p>
+            <p>これまでの調査結果を踏まえると、「{insert_something}」は既存のシェルコマンドのいくつかと似た特徴を持っている可能性があります。例えば、ディレクトリの情報を表示したり、ファイルを操作する機能を持っているかもしれません。しかし、その動作はまだ完全には明らかになっていないため、実際に使ってみないと分からない部分が多いです。
+            </p>
+            <p>また、「{insert_something}」の使い方が広まるにつれて、その特徴や用途が明確になり、より多くの人々が活用することになるでしょう。それまでは、他のコマンドと比較しながら推測を重ね、どのように機能するのかを見守っていくことが重要です。
+            </p>
+            <p>今後の開発に期待を寄せつつ、新たな情報が公開されることを待ちたいと思います。さらに詳しい調査や実際の使用例が出てくることで、より深く理解できることを願っています。結局のところ、こうした未知のコマンドがどのように実装され、活用されるのかが大きなポイントとなるでしょう。
+            </p>
+            <p>いかがでしたか？調べてみましたが、よくわかりませんでした。さらなるコマンドの開発に期待しましょう！</p>
+        </section>
+    </main>
 
-    <section id="similar-commands">
-        <h2>類似コマンド</h2>
-        <p>「{insert_something}」は、いくつかの既存のコマンドに似た機能を持っている可能性があります。以下に、類似しそうなコマンドを紹介します。</p>
-        <ul>
-            <li><strong>ls</strong>: ディレクトリの内容を表示するコマンドです。</li>
-            <li><strong>rm</strong>: ファイルやディレクトリを削除するコマンドです。</li>
-            <li><strong>echo</strong>: 文字列や変数の内容を出力するコマンドです。</li>
-            <li><strong>source</strong>: シェルスクリプトを現在のシェルセッションで実行するコマンドです。</li>
-            <li><strong>touch</strong>: ファイルのタイムスタンプを変更したり、新しいファイルを作成するコマンドです。</li>
-        </ul>
-    </section>
-
-    <section id="comparison">
-        <h2>「{insert_something}」との比較</h2>
-        <p>次に、「{insert_something}」と他の実際のコマンドを比較してみましょう。どんな点が似ているのか、または異なるのかを見てみましょう。</p>
-        <ul>
-            <li><strong>ls</strong>との比較: 「{insert_something}」は、ディレクトリ情報を表示するかもしれませんが、実際に表示される内容はまだはっきりしていません。</li>
-            <li><strong>rm</strong>との比較: 「{insert_something}」はファイルを削除する可能性があるかもしれませんが、今のところそのような動作は確認されていません。</li>
-            <li><strong>echo</strong>との比較: 「{insert_something}」は文字列を出力することが考えられますが、その出力結果は予測しにくいです。</li>
-            <li><strong>source</strong>との比較: 「{insert_something}」はシェルスクリプトの読み込みを行う可能性もありますが、仕様はまだ不明です。</li>
-            <li><strong>touch</strong>との比較: 「{insert_something}」はファイルのタイムスタンプを変更するかもしれませんが、どのファイルに影響するのかは不確かです。</li>
-        </ul>
-    </section>
-
-    <section id="conclusion">
-        <h2>結論</h2>
-        <p>調べた結果、「{insert_something}」についての情報はまだはっきりしない部分が多いことが分かりました。現時点では、その正確な機能や使用方法を確定することはできませんが、いくつかの予測は立てることができます。</p>
-        <p>まず、これまでの調査結果を踏まえると、「{insert_something}」は既存のシェルコマンドのいくつかと似た特徴を持っている可能性があります。例えば、ディレクトリの情報を表示したり、ファイルを操作する機能を持っているかもしれません。しかし、その動作はまだ完全には明らかになっていないため、実際に使ってみないと分からない部分が多いです。</p>
-        <p>また、「{insert_something}」の使い方が広まるにつれて、その特徴や用途が明確になり、より多くの人々が活用することになるでしょう。それまでは、他のコマンドと比較しながら推測を重ね、どのように機能するのかを見守っていくことが重要です。</p>
-        <p>今後の開発に期待を寄せつつ、新たな情報が公開されることを待ちたいと思います。さらに詳しい調査や実際の使用例が出てくることで、より深く理解できることを願っています。結局のところ、こうした未知のコマンドがどのように実装され、活用されるのかが大きなポイントとなるでしょう。</p>
-        <p>いかがでしたか？調べてみましたが、よくわかりませんでした。さらなるコマンドの開発に期待しましょう！</p>
-    </section>
-    
-
-</div>
-
-<footer>
-    <p>© 2024 すべての権利を保有。</p>
-</footer>
+    <footer class="site-footer">
+        <small>&copy; 2024 すべての権利を保有。</small>
+    </footer>
 
 </body>
+
 </html>
